// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SubscriptionEventsBus stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "BusArn": {
      "Export": {
        "Name": "subscription-events-bus-CODE-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "BusEA82B648",
          "Arn",
        ],
      },
    },
  },
  "Resources": {
    "BusEA82B648": {
      "Properties": {
        "LogConfig": {
          "IncludeDetail": "FULL",
          "Level": "INFO",
        },
        "Name": "subscription-events-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Events::EventBus",
    },
    "LogDeliveryC6CE9E62": {
      "DependsOn": [
        "LogDeliveryDeliverySource1D6C3364",
      ],
      "Properties": {
        "DeliveryDestinationArn": {
          "Fn::GetAtt": [
            "LogDeliveryDeliveryDestination1587285B",
            "Arn",
          ],
        },
        "DeliverySourceName": {
          "Ref": "BusEA82B648",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Logs::Delivery",
    },
    "LogDeliveryDeliveryDestination1587285B": {
      "Properties": {
        "DestinationResourceArn": {
          "Fn::GetAtt": [
            "LogDeliveryLogGroup0E28C611",
            "Arn",
          ],
        },
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "BusEA82B648",
              },
              "-logs-destination",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Logs::DeliveryDestination",
    },
    "LogDeliveryDeliverySource1D6C3364": {
      "Properties": {
        "LogType": "INFO_LOGS",
        "Name": {
          "Ref": "BusEA82B648",
        },
        "ResourceArn": {
          "Fn::GetAtt": [
            "BusEA82B648",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Logs::DeliverySource",
    },
    "LogDeliveryLogGroup0E28C611": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/vendedlogs/events/event-bus/",
              {
                "Ref": "BusEA82B648",
              },
            ],
          ],
        },
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`The SubscriptionEventsBus stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "BusArn": {
      "Export": {
        "Name": "subscription-events-bus-PROD-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "BusEA82B648",
          "Arn",
        ],
      },
    },
  },
  "Resources": {
    "BusEA82B648": {
      "Properties": {
        "LogConfig": {
          "IncludeDetail": "FULL",
          "Level": "INFO",
        },
        "Name": "subscription-events-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Events::EventBus",
    },
    "LogDeliveryC6CE9E62": {
      "DependsOn": [
        "LogDeliveryDeliverySource1D6C3364",
      ],
      "Properties": {
        "DeliveryDestinationArn": {
          "Fn::GetAtt": [
            "LogDeliveryDeliveryDestination1587285B",
            "Arn",
          ],
        },
        "DeliverySourceName": {
          "Ref": "BusEA82B648",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Logs::Delivery",
    },
    "LogDeliveryDeliveryDestination1587285B": {
      "Properties": {
        "DestinationResourceArn": {
          "Fn::GetAtt": [
            "LogDeliveryLogGroup0E28C611",
            "Arn",
          ],
        },
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "BusEA82B648",
              },
              "-logs-destination",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Logs::DeliveryDestination",
    },
    "LogDeliveryDeliverySource1D6C3364": {
      "Properties": {
        "LogType": "INFO_LOGS",
        "Name": {
          "Ref": "BusEA82B648",
        },
        "ResourceArn": {
          "Fn::GetAtt": [
            "BusEA82B648",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Logs::DeliverySource",
    },
    "LogDeliveryLogGroup0E28C611": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/vendedlogs/events/event-bus/",
              {
                "Ref": "BusEA82B648",
              },
            ],
          ],
        },
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
